--- a/trunk/HomeGrader/web.config
+++ b/trunk/HomeGrader/web.config
@@ -8,6 +8,8 @@
 		<add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
-		<compilation debug="true" targetFramework="4.0"/>
+		<compilation debug="true" targetFramework="4.0">
+			<assemblies>
+				<add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies></compilation>
 	</system.web>
 </configuration>
